<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/button_color"
            android:textColor="?attr/button_text_color"
            app:title="@string/login_title"
            app:titleCentered="true"
            app:titleTextColor="?attr/button_text_color" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/gmail_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/grid_border"
        android:hint="@string/gmail_hint"
        android:paddingStart="8dp"
        android:textColor="?attr/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/grid_border"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColor="?attr/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gmail_edit_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?attr/button_color"
            android:text="@string/sign_in_text"
            android:textColorHighlight="?attr/button_text_color"
            tools:layout_editor_absoluteX="265dp"
            tools:layout_editor_absoluteY="490dp" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?attr/button_color"
            android:text="@string/sign_up_text"
            android:textColorHighlight="?attr/button_text_color"
            tools:layout_editor_absoluteX="299dp"
            tools:layout_editor_absoluteY="579dp" />

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/button_color"
            android:text="@string/reset_password_text"
            android:textColorHighlight="?attr/button_text_color"
            tools:layout_editor_absoluteX="279dp"
            tools:layout_editor_absoluteY="701dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>